# log4cpp

./: .gitignore  CMakeLists.txt
log4cpp/include/: log.hpp
log4cpp/src/: log.cpp
tests/: CMakeLists.txt  test.cpp
